[gd_scene load_steps=17 format=3 uid="uid://br2su845oslf1"]

[ext_resource type="PackedScene" uid="uid://corqbcd430ebt" path="res://intro.tscn" id="1_r0du0"]
[ext_resource type="Texture2D" uid="uid://u0m1goj45rpl" path="res://intro_background.png" id="2_cm0pq"]
[ext_resource type="Script" uid="uid://ded4g2l2hurtk" path="res://intro.gd" id="2_fos0i"]
[ext_resource type="PackedScene" uid="uid://ciqxy83lbn7v" path="res://player.tscn" id="3_fos0i"]
[ext_resource type="PackedScene" uid="uid://cfqjolmle0juw" path="res://camera_2d.tscn" id="4_fos0i"]
[ext_resource type="Script" uid="uid://du8f2wlwicu20" path="res://door_trigger.gd" id="6_3dxm6"]

[sub_resource type="GDScript" id="GDScript_cm0pq"]
script/source = "extends Camera2D

func _ready() -> void:
	limit_left = 0
	limit_top = 0
	limit_right = 1536
	limit_bottom = 1024
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fos0i"]
size = Vector2(307.5, 349)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cm0pq"]
size = Vector2(992, 39)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_cm0pq"]
a = Vector2(7, -534)
b = Vector2(-4, 363)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dxm6"]
size = Vector2(921, 203)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgr22"]
size = Vector2(73, 900)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trn2v"]
size = Vector2(369.75, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03owx"]
size = Vector2(83.5, 67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fos0i"]
bg_color = Color(0.06469653, 0.064696535, 0.06469648, 0.5529412)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkp8b"]
size = Vector2(257, 11)

[node name="Main" type="Node2D"]

[node name="Intro" parent="." instance=ExtResource("1_r0du0")]
script = ExtResource("2_fos0i")

[node name="Background" type="Sprite2D" parent="Intro"]
z_index = -10
texture = ExtResource("2_cm0pq")
centered = false

[node name="Player" parent="Intro" instance=ExtResource("3_fos0i")]
position = Vector2(736, 488)

[node name="Camera2D" parent="Intro/Player" instance=ExtResource("4_fos0i")]
script = SubResource("GDScript_cm0pq")

[node name="Colliders" type="Node2D" parent="Intro"]

[node name="bed" type="StaticBody2D" parent="Intro/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Colliders/bed"]
position = Vector2(472.25, 369.5)
shape = SubResource("RectangleShape2D_fos0i")

[node name="top" type="StaticBody2D" parent="Intro/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Colliders/top"]
position = Vector2(773, 53)
shape = SubResource("RectangleShape2D_cm0pq")

[node name="bed2" type="StaticBody2D" parent="Intro/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Colliders/bed2"]
position = Vector2(1249, 596)
shape = SubResource("SegmentShape2D_cm0pq")

[node name="bed3" type="StaticBody2D" parent="Intro/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Colliders/bed3"]
position = Vector2(774.5, 278.5)
shape = SubResource("RectangleShape2D_3dxm6")

[node name="bed4" type="StaticBody2D" parent="Intro/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Colliders/bed4"]
position = Vector2(284.5, 511)
shape = SubResource("RectangleShape2D_lgr22")

[node name="bed5" type="StaticBody2D" parent="Intro/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Colliders/bed5"]
position = Vector2(466, 966)
shape = SubResource("RectangleShape2D_trn2v")

[node name="bed6" type="StaticBody2D" parent="Intro/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Colliders/bed6"]
position = Vector2(1077, 966)
shape = SubResource("RectangleShape2D_trn2v")

[node name="Note" type="Area2D" parent="Intro"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Note"]
position = Vector2(1017.25, 782.5)
shape = SubResource("RectangleShape2D_03owx")

[node name="Prompt" type="Label" parent="Intro/Note"]
visible = false
offset_left = 983.0
offset_top = 755.0
offset_right = 1046.0
offset_bottom = 811.0
text = "E"

[node name="UI" type="CanvasLayer" parent="Intro"]

[node name="DialogueBox" type="Panel" parent="Intro/UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 344.0
offset_top = -347.0
offset_right = -317.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_fos0i")

[node name="DialogueText" type="Label" parent="Intro/UI/DialogueBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.31
anchor_bottom = 0.60400003
offset_left = 12.0
offset_top = 14.0
offset_right = 590.75
offset_bottom = 81.831985
vertical_alignment = 1
autowrap_mode = 2

[node name="Door Trigger" type="Area2D" parent="Intro"]
script = ExtResource("6_3dxm6")
target_scene = "uid://nexlfglsj8pr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Intro/Door Trigger"]
position = Vector2(772.5, 983.5)
shape = SubResource("RectangleShape2D_wkp8b")

[node name="spawns" type="Node2D" parent="Intro"]

[node name="Default" type="Marker2D" parent="Intro/spawns"]
position = Vector2(739, 486)

[connection signal="body_entered" from="Intro/Note" to="Intro" method="_on_note_body_entered"]
[connection signal="body_exited" from="Intro/Note" to="Intro" method="_on_note_body_exited"]
[connection signal="body_entered" from="Intro/Door Trigger" to="Intro/Door Trigger" method="_on_body_entered"]
